test/errors/ease-type/ease-type.rom
Error in `ease-type.asm` on line 1: Invalid easing type `niceAndSlow`
